module projects: open packages with tests for test frameworks explicitly
GitOrigin-RevId: aa98e8d8ef8cecc0d7d77b1821e067d1f309559e